hphp/hack/test/typecheck/new_inference/prop_access2.php.exp
File "prop_access2.php", line 13, characters 7-15:
Invalid assignment (Typing[4053])
File "prop_access2.php", line 10, characters 14-14:
No property 'x' in A
File "prop_access2.php", line 6, characters 15-15:
This is why I think it is an object of type A
File "prop_access2.php", line 4, characters 7-7:
Declaration of A is here
